Fix text alignment on aside

--- a/css/main.css
+++ b/css/main.css
@@ -174,6 +174,10 @@ a:hover {
 
 
 
+.main aside {
+    text-align: center;
+}
+
 .main aside h3 {
     margin: auto;
     width: 6em;
